tests/fixtures/invalid/pointer_wrapped_nonzero_equality.c
int main(void) {
    int values[2] = {1, 2};
    int *pointer = values;
    return pointer == (int)+1;
}
